# jetblack-tzdata

./: .gitignore  README.md  package.json  pyproject.toml
jetblack_tzdata/: __init__.py  build.py  collector.py  compiler.py  downloader.py  dumper.py  packager.py  types.py
jetblack_tzdata/entrypoints/: build.py
package/: README.md  package.json
